# Robotics_project1_Gallo_Manzella_Prati

./: .gitignore  README.md
src/modifieddemo/: CMakeLists.txt  package.xml
src/modifieddemo/config/: amcl.launch  gmapping.launch.xml  hector.launch.xml  trajectory.launch.xml
src/modifieddemo/launch/: localization.launch  mapping.launch  mapping_hector.launch  mapping_pointcloud.launch  pointcloud_to_laserscan.launch  scan_merger.launch
src/modifieddemo/maps/: map_Bag_transform.pgm  map_from_gmap.pgm
src/modifieddemo/maps/backup/: map_Bag_transform.pgm  map_Bag_transform.yaml
src/modifieddemo/rvizconfig/: laser_map_odometry_for_amcl.rviz
src/modifieddemo/scripts/: map_trajectory_plotter.py  smoothing_map.py
src/modifieddemo/src/: map_saver.cpp  odom_tf_modified.cpp
src/modifieddemo/srv/: SaveMap.srv
src/project1/: CMakeLists.txt  README.md  config.rviz  package.xml  topdown.rviz
src/project1/cfg/: integMethod.cfg  parameters.cfg
src/project1/launch/: pose_vel.launch
src/project1/src/: broadcaster_tf2.cpp  compute_control.cpp  def.h  gt_pose.cpp  kinematics.cpp  odometry.cpp  param.h  pubtouseinthefuture.cpp
src/project1/srv/: ResetPose.srv
src/project2/: CMakeLists.txt  Readme.md  laser_map_odometry.rviz  laser_map_odometry_for_amcl.rviz  laserconfig.rviz  package.xml
src/project2/config/: amcl.launch  amcl.yaml  scan_merger.launch.xml
src/project2/launch/: localization.launch  mapping.launch  mapping_hector.launch  scan_merger.launch
src/project2/maps/: map_from_gmap.yaml
src/project2/rvizconfig/: laser_map_odometry.rviz
src/project2/scripts/: map_trajectory_plotter.py
src/project2/src/: odom_tf_publish.cpp
src/project2/srv/: SaveMap.srv
src/pub_sub/: CMakeLists.txt  package.xml
src/pub_sub/src/: pub.cpp  sub.cpp
